<?xml version="1.0"?>
<package>
  <name>rgbd_depth_correction</name>
  <version>0.0.0</version>
  <description>RGBD depth calibration and correction</description>
  
  <maintainer email="alexgoins301@gmail.com">Alex K. Goins</maintainer>
  <license>Apache</license>

  <!-- <url type="website">http://wiki.ros.org/rgbd_depth_correction</url> -->

  <author email="alexgoins301@gmail.com">Alex K. Goins</author>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_bullet</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>target_finder</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>target_finder</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf2_bullet</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>nodelet</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
