<?xml version="1.0"?>
<package>
  <name>rgbd_depth_correction</name>
  <version>0.1.0</version>
  <description>
    RGBD depth calibration and correction.
  </description>
  <author email="alexgoins301@gmail.com">Alex K. Goins</author>
  <maintainer email="alexgoins301@gmail.com">Alex K. Goins</maintainer>
  <license>Apache2.0</license>

  <url type="website">http://wiki.ros.org/rgbd_depth_correction</url>
  <url type="bugtracker">https://github.com/ros-industrial/industrial_calibration/issues</url>
  <url type="repository">https://github.com/ros-industrial/industrial_calibration</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>industrial_extrinsic_cal</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>openni2_camera</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>target_finder</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>target_finder</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_view</run_depend>
  <run_depend>industrial_extrinsic_cal</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>openni2_camera</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>target_finder</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>yaml-cpp</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>
</package>
