<?xml version="1.0"?>
<package format="2">
  <name>rgbd_depth_correction</name>
  <version>0.1.0</version>
  <description>
    RGBD depth calibration and correction.
  </description>
  <author email="alexgoins301@gmail.com">Alex K. Goins</author>
  <maintainer email="alexgoins301@gmail.com">Alex K. Goins</maintainer>
  <maintainer email="Austin.Deric@gmail.com">AustinDeric</maintainer>
  <license>Apache2.0</license>

  <url type="website">http://wiki.ros.org/rgbd_depth_correction</url>
  <url type="bugtracker">https://github.com/ros-industrial/industrial_calibration/issues</url>
  <url type="repository">https://github.com/ros-industrial/industrial_calibration</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <depend>boost</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>industrial_extrinsic_cal</depend>
  <depend>message_filters</depend>
  <depend>nodelet</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>target_finder</depend>
  <depend>yaml-cpp</depend>
  <depend>ceres-solver</depend>

  <exec_depend>image_view</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>


  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>
</package>
